// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippets (default) > examples > 'GET /metadata (allow-multiple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Service\\Requests\\ServiceGetMetadataRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->service->getmetadata(
    new ServiceGetMetadataRequest([
        'shallow' => false,
        'tag' => [
            'development',
            'public',
        ],
        'apiVersion' => '0.0.1',
    ]),
);
"
`;

exports[`snippets (default) > examples > 'GET /metadata (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Service\\Requests\\ServiceGetMetadataRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->service->getmetadata(
    new ServiceGetMetadataRequest([
        'shallow' => false,
        'tag' => [
            'development',
        ],
        'apiVersion' => '0.0.1',
    ]),
);
"
`;

exports[`snippets (default) > examples > 'POST /big-entity (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Service\\Requests\\BigEntity;
use Acme\\Types\\Actor;
use Acme\\Types\\ExtendedMovie;
use Acme\\Types\\MovieType;
use Acme\\Types\\CommonsEventInfoZero;
use Acme\\Types\\CommonsEventInfoZeroType;
use Acme\\Types\\Migration;
use Acme\\Types\\MigrationStatus;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->service->createbigentity(
    new BigEntity([
        'castMember' => new Actor([
            'id' => 'john.doe',
            'name' => 'John Doe',
        ]),
        'extendedMovie' => new ExtendedMovie([
            'cast' => [
                'John Travolta',
                'Samuel L. Jackson',
                'Uma Thurman',
                'Bruce Willis',
            ],
            'id' => 'movie-sda231x',
            'title' => 'Pulp Fiction',
            'from' => 'Quentin Tarantino',
            'rating' => 8.5,
            'type' => MovieType::Movie->value,
            'tag' => 'tag-12efs9dv',
            'metadata' => [
                'academyAward' => true,
                'releaseDate' => "2023-12-08",
                'ratings' => [
                    'rottenTomatoes' => 97,
                    'imdb' => 7.6,
                ],
            ],
            'revenue' => 1000000,
        ]),
        'eventInfo' => new CommonsEventInfoZero([
            'type' => CommonsEventInfoZeroType::Metadata->value,
            'id' => 'event-12345',
            'data' => [
                'key1' => 'val1',
                'key2' => 'val2',
            ],
            'jsonString' => 'abc',
        ]),
        'migration' => new Migration([
            'name' => 'Migration 31 Aug',
            'status' => MigrationStatus::Running->value,
        ]),
    ]),
);
"
`;

exports[`snippets (default) > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > examples > 'POST /movie (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Types\\Movie;
use Acme\\Types\\MovieType;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->service->createmovie(
    new Movie([
        'id' => 'movie-c06a4ad7',
        'prequel' => 'movie-cv9b914f',
        'title' => 'The Boy and the Heron',
        'from' => 'Hayao Miyazaki',
        'rating' => 8,
        'type' => MovieType::Movie->value,
        'tag' => 'development',
        'metadata' => [
            'actors' => [
                "Christian Bale",
                "Florence Pugh",
                "Willem Dafoe",
            ],
            'releaseDate' => "2023-12-08",
            'ratings' => [
                'rottenTomatoes' => 97,
                'imdb' => 7.6,
            ],
        ],
        'revenue' => 1000000,
    ]),
);
"
`;

exports[`snippets (default) > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "bigint"
    ],
    "message": "Expected number, got string"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "invalid"
    ],
    "message": "\\"invalid\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Types\\TypesObjectWithRequiredField;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->endpointsContainer->endpointsContainerGetAndReturnListOfObjects(
    [
        new TypesObjectWithRequiredField([
            'string' => 'one',
        ]),
        new TypesObjectWithRequiredField([
            'string' => 'two',
        ]),
        new TypesObjectWithRequiredField([
            'string' => 'three',
        ]),
    ],
);
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->endpointsContainer->endpointsContainerGetAndReturnListOfPrimitives(
    [
        'one',
        'two',
        'three',
    ],
);
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/map-prim-to-union (mi…' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->endpointsContainer->endpointsContainerGetAndReturnMapOfPrimToUndiscriminatedUnion(
    [
        'test' => 0,
        'test2' => true,
        'test3' => 'Test',
        'test4' => [
            '1',
            '1',
            '1',
            '1',
        ],
    ],
);
"
`;

exports[`snippets (default) > file-upload > 'POST /' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected file value to be a string, got object"
  }
]"
`;

exports[`snippets (default) > file-upload > 'POST /just-file' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Service\\Requests\\ServiceJustFileRequest;
use Acme\\Utils\\File;

$client = new AcmeClient();
$client->service->justfile(
    new ServiceJustFileRequest([
        'file' => File::createFromString("Hello, world!", "Hello, world!"),
    ]),
);
"
`;

exports[`snippets (default) > file-upload > 'POST /just-file-with-query-params' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Service\\Requests\\ServiceJustFileWithQueryParamsRequest;
use Acme\\Utils\\File;

$client = new AcmeClient();
$client->service->justfilewithqueryparams(
    new ServiceJustFileWithQueryParamsRequest([
        'integer' => 42,
        'maybeString' => 'exists',
        'file' => File::createFromString("Hello, world!", "Hello, world!"),
    ]),
);
"
`;

exports[`snippets (default) > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->imdb->getmovie(
    'movie_xyz',
);
"
`;

exports[`snippets (default) > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Imdb\\Requests\\CreateMovieRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->imdb->createmovie(
    new CreateMovieRequest([
        'title' => 'The Matrix',
        'rating' => 8.2,
    ]),
);
"
`;

exports[`snippets (default) > multi-url-environment > 'Custom environment' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\S3\\Requests\\S3GetPresignedURLRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->s3->getpresignedurl(
    new S3GetPresignedURLRequest([
        's3Key' => 'xyz',
    ]),
);
"
`;

exports[`snippets (default) > multi-url-environment > 'Invalid multi url environment' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\S3\\Requests\\S3GetPresignedURLRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
);
$client->s3->getpresignedurl(
    new S3GetPresignedURLRequest([
        's3Key' => 'xyz',
    ]),
);
"
`;

exports[`snippets (default) > multi-url-environment > 'Production environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Production\\" was not found"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (default) > nullable > 'Body properties' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Nullable\\Requests\\NullableCreateUserRequest;
use Acme\\Types\\Metadata;
use DateTime;

$client = new AcmeClient(
    options: [
        'baseUrl' => 'https://api.example.com',
    ],
);
$client->nullable->createuser(
    new NullableCreateUserRequest([
        'username' => 'john.doe',
        'tags' => [
            'admin',
        ],
        'metadata' => new Metadata([
            'createdAt' => new DateTime('1980-01-01T00:00:00Z'),
            'updatedAt' => new DateTime('1980-01-01T00:00:00Z'),
            'avatar' => null,
            'activated' => null,
        ]),
        'avatar' => null,
    ]),
);
"
`;

exports[`snippets (default) > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected non-null value, but got null"
  }
]"
`;

exports[`snippets (default) > nullable > 'Query parameters' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Nullable\\Requests\\NullableGetUsersRequest;

$client = new AcmeClient(
    options: [
        'baseUrl' => 'https://api.example.com',
    ],
);
$client->nullable->getusers(
    new NullableGetUsersRequest([
        'usernames' => [
            'john.doe',
            'jane.doe',
        ],
        'tags' => [
            null,
        ],
        'extra' => null,
    ]),
);
"
`;

exports[`snippets (default) > read-write-only > 'Body properties' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Types\\User;
use Acme\\Types\\UserProfile;
use Acme\\Types\\UserProfileVerification;

$client = new AcmeClient(
    options: [
        'baseUrl' => 'https://api.example.com',
    ],
);
$client->_->createUser(
    new User([
        'password' => 'password',
        'profile' => new UserProfile([
            'name' => 'name',
            'verification' => new UserProfileVerification([
                'verified' => 'value',
            ]),
            'ssn' => 'ssn',
        ]),
        'id' => 'value',
        'email' => 'value',
    ]),
);
"
`;

exports[`snippets (default) > read-write-only > 'Readonly value in request' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Types\\User;
use Acme\\Types\\UserProfile;
use Acme\\Types\\UserProfileVerification;

$client = new AcmeClient(
    options: [
        'baseUrl' => 'https://api.example.com',
    ],
);
$client->_->createUser(
    new User([
        'id' => 'id',
        'password' => 'password',
        'profile' => new UserProfile([
            'name' => 'name',
            'verification' => new UserProfileVerification([
                'verified' => 'value',
            ]),
            'ssn' => 'ssn',
        ]),
        'email' => 'value',
    ]),
);
"
`;

exports[`snippets (default) > required-headers > 'GET /plants (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
    options: [
        'tenantId' => 'my-tenant-id',
    ],
);
$client->plantstore->list();
"
`;

exports[`snippets (default) > required-headers > 'POST /plants (simple)' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Plantstore\\Types\\CreatePlantRequest;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
    options: [
        'tenantId' => 'my-tenant-id',
    ],
);
$client->plantstore->create(
    new CreatePlantRequest([
        'name' => 'Fern',
        'price' => 12.99,
    ]),
);
"
`;

exports[`snippets (default) > single-url-environment-default > 'Production environment' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;
use Acme\\Environments;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
    options: [
        'baseUrl' => Environments::Production->value,
    ],
);
$client->dummy->getdummy();
"
`;

exports[`snippets (default) > single-url-environment-default > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'custom baseURL' 1`] = `
"<?php

namespace Example;

use Acme\\AcmeClient;

$client = new AcmeClient(
    token: '<YOUR_API_KEY>',
    options: [
        'baseUrl' => 'http://localhost:8080',
    ],
);
$client->dummy->getdummy();
"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;
